--- a/api-reference.html
+++ b/api-reference.html
@@ -10,7 +10,7 @@
     <title>API Reference — Phoenix Localized Routes v0.1.0</title>
     <link rel="stylesheet" href="dist/elixir-b6f1ed5df9b1d42a7309.css" />
 
-    <script src="dist/sidebar_items-48d2b52a43.js"></script>
+    <script src="dist/sidebar_items-90d533223c.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -124,7 +124,7 @@ callbacks return precompiled values with precomputed additional data.</p></div>
 
   </div>
 
-    <div class="summary-synopsis"><p>Struct for compiled configuration</p></div>
+    <div class="summary-synopsis"><p>Module to create and validate a Config struct</p></div>
 
 </div>
 <div class="summary-row">
@@ -160,6 +160,20 @@ callbacks return precompiled values with precomputed additional data.</p></div>
   </div>
 
     <div class="summary-synopsis"><p>Raised when the scope map does not start with the root scope &quot;/&quot;.</p></div>
+
+</div>
+<div class="summary-row">
+  <div class="summary-signature">
+    <a href="PhxLocalizedRoutes.Fixtures.html" translate="no">PhxLocalizedRoutes.Fixtures</a>
+
+  </div>
+
+</div>
+<div class="summary-row">
+  <div class="summary-signature">
+    <a href="PhxLocalizedRoutes.Fixtures.Assigns.html" translate="no">PhxLocalizedRoutes.Fixtures.Assigns</a>
+
+  </div>
 
 </div>
 <div class="summary-row">
