--- a/readme.html
+++ b/readme.html
@@ -10,7 +10,7 @@
     <title>README — Phoenix Localized Routes v0.1.0</title>
     <link rel="stylesheet" href="dist/elixir-b6f1ed5df9b1d42a7309.css" />
 
-    <script src="dist/sidebar_items-48d2b52a43.js"></script>
+    <script src="dist/sidebar_items-90d533223c.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -126,7 +126,7 @@ relevance.</li><li>[x]  Works with Phoenix View and Phoenix LiveView</li><li>[x]
   </a>
   Usage Summary
 </h2>
-<ul><li>Add a few line of code to your <a href="https://hexdocs.pm/phoenix/1.6.6/Phoenix.html"><code class="inline">Phoenix</code></a> application.</li><li>Add a configuration file describing which alternate routes to generate.</li><li>Optionally:<ul><li>Run <code class="inline">mix gettext.extract --merge</code>.</li><li>Translate the URL parts like any other translatable text.</li></ul></li><li>Run <a href="https://hexdocs.pm/phoenix/1.6.6/Mix.Tasks.Phx.Routes.html"><code class="inline">mix phx.routes</code></a> to verify the result.</li></ul><p>All links in your application will now automatically use the routes for the set locale.</p><p>The full guide is written in the <a href="usage.html">Usage Guide</a>.</p><h2 id="requirements" class="section-heading">
+<ul><li>Add a few line of code to your <a href="https://hexdocs.pm/phoenix/1.6.6/Phoenix.html"><code class="inline">Phoenix</code></a> application.</li><li>Add a configuration file describing which alternate routes to generate.</li><li>Optionally:<ul><li>Run <code class="inline">mix gettext.extract --merge</code>.</li><li>Translate the URL parts like any other translatable text.</li></ul></li><li>Run <a href="https://hexdocs.pm/phoenix/1.6.6/Mix.Tasks.Phx.Routes.html"><code class="inline">mix phx.routes</code></a> to verify the result.</li></ul><p>All links in your application will now automatically keep the user in the correct scope.</p><p>The full guide is written in the <a href="usage.html">Usage Guide</a>.</p><h2 id="requirements" class="section-heading">
   <a href="#requirements" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">requirements</p>
   </a>
@@ -152,11 +152,11 @@ relevance.</li><li>[x]  Works with Phoenix View and Phoenix LiveView</li><li>[x]
   </a>
   Installation
 </h2>
-<p>You can install this library by adding it to your list of dependencies in <code class="inline">mix.exs</code>:</p><pre><code class="makeup elixir" translate="no"><span class="kd">def</span><span class="w"> </span><span class="nf">deps</span><span class="w"> </span><span class="k" data-group-id="9878345706-1">do</span><span class="w">
-  </span><span class="p" data-group-id="9878345706-2">[</span><span class="w">
-    </span><span class="p" data-group-id="9878345706-3">{</span><span class="ss">:phoenix_localized_routes</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;~&gt; 0.1.0&quot;</span><span class="p" data-group-id="9878345706-3">}</span><span class="w">
-  </span><span class="p" data-group-id="9878345706-2">]</span><span class="w">
-</span><span class="k" data-group-id="9878345706-1">end</span></code></pre><p>To configure your routes have a look at the <a href="usage.html">Usage Guide</a>.</p><h2 id="technical-notes" class="section-heading">
+<p>You can install this library by adding it to your list of dependencies in <code class="inline">mix.exs</code>:</p><pre><code class="makeup elixir" translate="no"><span class="kd">def</span><span class="w"> </span><span class="nf">deps</span><span class="w"> </span><span class="k" data-group-id="3250813570-1">do</span><span class="w">
+  </span><span class="p" data-group-id="3250813570-2">[</span><span class="w">
+    </span><span class="p" data-group-id="3250813570-3">{</span><span class="ss">:phoenix_localized_routes</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;~&gt; 0.1.0&quot;</span><span class="p" data-group-id="3250813570-3">}</span><span class="w">
+  </span><span class="p" data-group-id="3250813570-2">]</span><span class="w">
+</span><span class="k" data-group-id="3250813570-1">end</span></code></pre><p>To configure your routes have a look at the <a href="usage.html">Usage Guide</a>.</p><h2 id="technical-notes" class="section-heading">
   <a href="#technical-notes" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">technical-notes</p>
   </a>
