--- a/changelog.html
+++ b/changelog.html
@@ -10,7 +10,7 @@
     <title>Changelog — Phoenix Localized Routes v0.1.0</title>
     <link rel="stylesheet" href="dist/elixir-b6f1ed5df9b1d42a7309.css" />
 
-    <script src="dist/sidebar_items-48d2b52a43.js"></script>
+    <script src="dist/sidebar_items-90d533223c.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -102,7 +102,26 @@ Phoenix Localized Routes
   <span>Changelog</span>
 </h1>
 
-<h2 id="0-1-0" class="section-heading">
+<h2 id="0-1-1" class="section-heading">
+  <a href="#0-1-1" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">0-1-1</p>
+  </a>
+  0.1.1
+</h2>
+<h3 id="1-enhancements" class="section-heading">
+  <a href="#1-enhancements" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">1-enhancements</p>
+  </a>
+  1. Enhancements
+</h3>
+<pre><code class="makeup elixir" translate="no"><span class="o">*</span><span class="w"> </span><span class="nc">Added</span><span class="w"> </span><span class="n">typespecs</span><span class="w">
+</span><span class="o">*</span><span class="w"> </span><span class="nc">Modules</span><span class="w"> </span><span class="n">split</span><span class="w"> </span><span class="k">for</span><span class="w"> </span><span class="n">better</span><span class="w"> </span><span class="n">test</span><span class="w"> </span><span class="n">experience</span></code></pre><h3 id="2-bugfixes" class="section-heading">
+  <a href="#2-bugfixes" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">2-bugfixes</p>
+  </a>
+  2. Bugfixes
+</h3>
+<pre><code class="makeup elixir" translate="no"><span class="o">*</span><span class="w"> </span><span class="err">`</span><span class="nc">Helpers</span><span class="o">.</span><span class="n">loc_route</span><span class="err">`</span><span class="w"> </span><span class="n">requires</span><span class="w"> </span><span class="ss">:loc_opts</span><span class="w"> </span><span class="n">of</span><span class="w"> </span><span class="n">type</span><span class="w"> </span><span class="err">`</span><span class="nc">Scope.Flat</span><span class="o">.</span><span class="n">t</span><span class="p" data-group-id="7058490518-1">(</span><span class="p" data-group-id="7058490518-1">)</span><span class="w"> </span><span class="o">|</span><span class="w"> </span><span class="no">nil</span><span class="err">`</span><span class="w"> </span><span class="n">instead</span><span class="w"> </span><span class="n">of</span><span class="w"> </span><span class="n">freeform</span><span class="w"> </span><span class="err">`</span><span class="n">map</span><span class="w"> </span><span class="o">|</span><span class="w"> </span><span class="no">nil</span><span class="err">`</span></code></pre><h2 id="0-1-0" class="section-heading">
   <a href="#0-1-0" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">0-1-0</p>
   </a>
