--- a/readme.html
+++ b/readme.html
@@ -10,7 +10,7 @@
     <title>README — Phoenix Localized Routes v0.1.1</title>
     <link rel="stylesheet" href="dist/elixir-b6f1ed5df9b1d42a7309.css" />
 
-    <script src="dist/sidebar_items-90d533223c.js"></script>
+    <script src="dist/sidebar_items-62f1d6a736.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -104,65 +104,75 @@ Phoenix Localized Routes
 
 <p><img src="https://img.shields.io/coveralls/github/BartOtten/phoenix_localized_routes" alt="Coveralls"/>
 <a href="https://github.com/BartOtten/phoenix_localized_routes/actions/workflows/elixir.yml"><img src="https://github.com/BartOtten/phoenix_localized_routes/actions/workflows/elixir.yml/badge.svg?event=push" alt="Build Status"/></a>
-<a href="https://github.com/BartOtten/phoenix_localized_routes/commits/main"><img src="https://img.shields.io/github/last-commit/BartOtten/phoenix_localized_routes.svg" alt="Last Updated"/></a></p><h1>Phoenix Localized Routes</h1><p>Localize your Phoenix website with multilingual URL's and custom template assigns; enhancing 
-user engagement and content relevance.</p><pre><code class="makeup elixir" translate="no"><span class="w">                    </span><span class="p">=&gt;</span><span class="w">  </span><span class="o">/</span><span class="n">products</span><span class="o">/</span><span class="ss">:id</span><span class="o">/</span><span class="n">edit</span><span class="w">          </span><span class="na">@loc</span><span class="o">.</span><span class="n">contact</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="s">&quot;int@company.com&quot;</span><span class="w">
-</span><span class="o">/</span><span class="n">products</span><span class="o">/</span><span class="ss">:id</span><span class="o">/</span><span class="n">edit</span><span class="w">  </span><span class="p">=&gt;</span><span class="w">  </span><span class="o">/</span><span class="n">nl</span><span class="o">/</span><span class="n">producten</span><span class="o">/</span><span class="ss">:id</span><span class="o">/</span><span class="n">bewerken</span><span class="w">  </span><span class="na">@loc</span><span class="o">.</span><span class="n">contact</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="s">&quot;netherlands@company.com&quot;</span><span class="w">
-                    </span><span class="p">=&gt;</span><span class="w">  </span><span class="o">/</span><span class="n">es</span><span class="o">/</span><span class="n">producto</span><span class="o">/</span><span class="ss">:id</span><span class="o">/</span><span class="n">editar</span><span class="w">     </span><span class="na">@loc</span><span class="o">.</span><span class="n">contact</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="s">&quot;spain@company.com&quot;</span></code></pre><h2 id="features-and-benefits" class="section-heading">
+<a href="https://github.com/BartOtten/phoenix_localized_routes/commits/main"><img src="https://img.shields.io/github/last-commit/BartOtten/phoenix_localized_routes.svg" alt="Last Updated"/></a>
+<a href="https://hex.pm/packages/phoenix_localized_routes"><img src="https://img.shields.io/hexpm/v/phoenix_localized_routes" alt="Hex.pm"/></a>
+<img src="https://img.shields.io/hexpm/l/phoenix_localized_routes" alt="Hex.pm"/></p><h1>Phoenix Localized Routes</h1><p>Localize your Phoenix website with multilingual URL's and custom template assigns; enhancing 
+user engagement and content relevance.</p><pre><code class="makeup elixir" translate="no"><span class="w">                    </span><span class="p">=&gt;</span><span class="w">  </span><span class="o">/</span><span class="n">products</span><span class="o">/</span><span class="ss">:id</span><span class="o">/</span><span class="n">edit</span><span class="w">                 </span><span class="na">@loc</span><span class="o">.</span><span class="n">locale</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="s">&quot;en_US&quot;</span><span class="w">
+</span><span class="o">/</span><span class="n">products</span><span class="o">/</span><span class="ss">:id</span><span class="o">/</span><span class="n">edit</span><span class="w">  </span><span class="p">=&gt;</span><span class="w">  </span><span class="o">/</span><span class="n">nederland</span><span class="o">/</span><span class="n">producten</span><span class="o">/</span><span class="ss">:id</span><span class="o">/</span><span class="n">bewerken</span><span class="w">  </span><span class="na">@loc</span><span class="o">.</span><span class="n">locale</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="s">&quot;nl_NL&quot;</span><span class="w">
+                    </span><span class="p">=&gt;</span><span class="w">  </span><span class="o">/</span><span class="n">espana</span><span class="o">/</span><span class="n">producto</span><span class="o">/</span><span class="ss">:id</span><span class="o">/</span><span class="n">editar</span><span class="w">        </span><span class="na">@loc</span><span class="o">.</span><span class="n">locale</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="s">&quot;es_ES&quot;</span></code></pre><h2 id="features-and-benefits" class="section-heading">
   <a href="#features-and-benefits" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">features-and-benefits</p>
   </a>
   Features and Benefits
 </h2>
-<ul><li>[x]  URL matches language of content which can enhance user engagement and content
-relevance.</li><li>[x]  Works with Phoenix View and Phoenix LiveView</li><li>[x]  Unlimited nesting</li><li>[x]  Supports dynamic nesting (eg. <code class="inline">/{continent}/{county}/{page}</code> <em>and</em> <code class="inline">/{country}/{page}</code>)</li><li>[x]  Less boilerplate in your <code class="inline">routes.ex</code></li><li>[x]  Generates routes at compile time; no performance penalty!</li><li>[x]  Easily add custom assigns to your (localized) routes</li><li>[x]  Easily generate links to matching pages in other locales</li><li>[x]  Can be used for non-locale alternate routing (eg. <code class="inline">/{sport}/{activity}</code>)</li></ul><h2 id="documentation" class="section-heading">
-  <a href="#documentation" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
-  <p class="sr-only">documentation</p>
-  </a>
-  Documentation
-</h2>
-<p>Documentation can be found at <a href="https://hexdocs.pm/phoenix_localized_routes/">HexDocs</a> (published) and <a href="https://bartotten.github.io/phoenix_localized_routes/">GitHub Pages</a> (development)</p><h2 id="usage-summary" class="section-heading">
+<ul><li>[x]  URL format is <a href="#routes">locale independent</a> (no mandatory <code class="inline">website.com/[locale]/page</code>)</li><li>[x]  URL <a href="#multilingual-routes">matches language of content</a>; enhancing user engagement and content relevance.</li><li>[x]  <a href="usage.html#helpers">Less than 10 lines</a> of code to be changed in existing code Phoenix applications.</li><li>[x]  Includes <a href="#route-helpers">helper functions</a> to generate links to other locales.</li><li>[x]  Supports <a href="#custom-assigns">custom assigns</a> per scope/locale.</li><li>[x]  Routes and helpers generated at compile time; no performance penalty!</li></ul><p>Simple when possible, powerful where needed.</p><h2 id="usage-summary" class="section-heading">
   <a href="#usage-summary" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">usage-summary</p>
   </a>
   Usage Summary
 </h2>
-<ul><li>Add a few line of code to your <a href="https://hexdocs.pm/phoenix/1.6.6/Phoenix.html"><code class="inline">Phoenix</code></a> application.</li><li>Add a configuration file describing which alternate routes to generate.</li><li>Optionally:<ul><li>Run <code class="inline">mix gettext.extract --merge</code>.</li><li>Translate the URL parts like any other translatable text.</li></ul></li><li>Run <a href="https://hexdocs.pm/phoenix/1.6.6/Mix.Tasks.Phx.Routes.html"><code class="inline">mix phx.routes</code></a> to verify the result.</li></ul><p>All links in your application will now automatically keep the user in the correct scope.</p><p>The full guide is written in the <a href="usage.html">Usage Guide</a>.</p><h2 id="requirements" class="section-heading">
-  <a href="#requirements" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
-  <p class="sr-only">requirements</p>
+<ul><li>Add a configuration file describing which alternate routes to generate.</li><li>Replace <strong>less than 10 lines</strong> of code in your existing <a href="https://hexdocs.pm/phoenix/1.6.6/Phoenix.html"><code class="inline">Phoenix</code></a> application.</li><li>Optionally:<ul><li>Run <code class="inline">mix gettext.extract --merge</code>.</li><li>Translate the URL parts like any other translatable text.</li></ul></li><li>Run <a href="https://hexdocs.pm/phoenix/1.6.6/Mix.Tasks.Phx.Routes.html"><code class="inline">mix phx.routes</code></a> to verify the result.</li></ul><p>All links in your application will now automatically keep the user in the correct scope.</p><h2 id="documentation" class="section-heading">
+  <a href="#documentation" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">documentation</p>
   </a>
-  Requirements
+  Documentation
 </h2>
-<ul><li>Elixir &gt;=1.11</li><li>Phoenix &gt;= 1.6.0</li><li>Phoenix LiveView &gt;= 0.16 (optional)</li></ul><h2 id="example" class="section-heading">
-  <a href="#example" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
-  <p class="sr-only">example</p>
+<p>Documentation can be found at <a href="https://hexdocs.pm/phoenix_localized_routes/">HexDocs</a> (published) and <a href="https://bartotten.github.io/phoenix_localized_routes/">GitHub Pages</a> (development). We also provide an <a href="#example-application">example application</a></p><h2 id="requirements-and-installation" class="section-heading">
+  <a href="#requirements-and-installation" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">requirements-and-installation</p>
   </a>
-  Example
+  Requirements and  Installation
 </h2>
-<p>An example Phoenix application showing the (nested) routes and custom assigns.</p><pre><code class="makeup elixir" translate="no"><span class="n">git</span><span class="w"> </span><span class="n">clone</span><span class="w"> </span><span class="n">https</span><span class="ss">://</span><span class="n">github</span><span class="o">.</span><span class="n">com</span><span class="o">/</span><span class="nc">BartOtten</span><span class="o">/</span><span class="n">phoenix_localized_routes_example</span><span class="o">.</span><span class="n">git</span><span class="w">
-</span><span class="n">cd</span><span class="w"> </span><span class="n">phoenix_localized_routes_example</span><span class="w">
-</span><span class="n">iex</span><span class="w"> </span><span class="o">-</span><span class="nc">S</span><span class="w"> </span><span class="n">mix</span><span class="w"> </span><span class="n">phx</span><span class="o">.</span><span class="n">server</span><span class="w">
-
-</span><span class="n">http</span><span class="ss">://</span><span class="n">localhost</span><span class="p">:</span><span class="mi">4000</span><span class="o">/</span><span class="w">
-</span><span class="n">http</span><span class="ss">://</span><span class="n">localhost</span><span class="p">:</span><span class="mi">4000</span><span class="o">/</span><span class="n">europe</span><span class="w">
-
-</span><span class="n">http</span><span class="ss">://</span><span class="n">localhost</span><span class="p">:</span><span class="mi">4000</span><span class="o">/</span><span class="n">products</span><span class="w">
-</span><span class="n">http</span><span class="ss">://</span><span class="n">localhost</span><span class="p">:</span><span class="mi">4000</span><span class="o">/</span><span class="n">europe</span><span class="o">/</span><span class="n">nl</span><span class="o">/</span><span class="n">producten</span><span class="o">/</span></code></pre><h2 id="installation" class="section-heading">
-  <a href="#installation" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
-  <p class="sr-only">installation</p>
+<p>See the <a href="usage.html">Usage Guide</a> for the requirements and installation instructions.</p><h2 id="working" class="section-heading">
+  <a href="#working" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">working</p>
   </a>
-  Installation
+  Working
 </h2>
-<p>You can install this library by adding it to your list of dependencies in <code class="inline">mix.exs</code>:</p><pre><code class="makeup elixir" translate="no"><span class="kd">def</span><span class="w"> </span><span class="nf">deps</span><span class="w"> </span><span class="k" data-group-id="9545859500-1">do</span><span class="w">
-  </span><span class="p" data-group-id="9545859500-2">[</span><span class="w">
-    </span><span class="p" data-group-id="9545859500-3">{</span><span class="ss">:phoenix_localized_routes</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;~&gt; 0.1.0&quot;</span><span class="p" data-group-id="9545859500-3">}</span><span class="w">
-  </span><span class="p" data-group-id="9545859500-2">]</span><span class="w">
-</span><span class="k" data-group-id="9545859500-1">end</span></code></pre><p>To configure your routes have a look at the <a href="usage.html">Usage Guide</a>.</p><h2 id="technical-notes" class="section-heading">
-  <a href="#technical-notes" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
-  <p class="sr-only">technical-notes</p>
+<p>This chapter aims at providing a high over view of the main features of Phoenix Localized Routes.</p><h3 id="routes" class="section-heading">
+  <a href="#routes" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">routes</p>
   </a>
-  Technical Notes
+  Routes
+</h3>
+<p>This library provides a localize/1 macro that is designed to wrap all route macros such as get/3, put/3 and resources/3. The routes are replicated for each <code class="inline">scope</code> configured in a <code class="inline">LocalizedRoutes</code> backend module.</p><ul><li>each configured scope may have nested scopes.</li><li>each configured scope may have custom assigns.</li><li>routes may be translated.</li><li>routes are locale independent (no mandatory <code class="inline">website.com/[locale]/</code> format)</li></ul><p>As a result, you have full control over the format, language and assigns of localized URL's.</p><h3 id="route-helpers" class="section-heading">
+  <a href="#route-helpers" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">route-helpers</p>
+  </a>
+  Route Helpers
+</h3>
+<p>Locale aware replicas of the standard Phoenix helper functions are created to support auto-localized paths and URLs. Those replicas are placed in a new module named <code class="inline">[MyAppWeb].Router.Helpers.Localized</code>. Additionally, the new module includes helpers for each locale to support linking to a specific locale. </p><p>The new module is a drop-in replacement of the standard Phoenix Helper module, so you can replace the <code class="inline">MyAppWeb.Router.Helpers, as: Routes</code> alias by <code class="inline">MyAppWeb.Router.Helpers.Localized, as: Routes</code> in <code class="inline">myapp_web.ex</code>. </p><p>As a result, all links to localized routes will respect the current scope of a visitor unless you decide otherwise.</p><h3 id="multilingual-routes" class="section-heading">
+  <a href="#multilingual-routes" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">multilingual-routes</p>
+  </a>
+  Multilingual Routes
+</h3>
+<p>The original route paths are split and each individual part is extracted to a <code class="inline">routes.po</code> file for translation. During compile-time the translated parts are combined to create translated routes. </p><p>As a result, users can enter URLs using localised terms which can enhance user engagement and content relevance.</p><h3 id="custom-assigns" class="section-heading">
+  <a href="#custom-assigns" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">custom-assigns</p>
+  </a>
+  Custom Assigns
+</h3>
+<p>Each scope can specify custom assigns. The customs assigns are made available in templates as <code class="inline">@loc</code> (e.g.<code class="inline">@loc.support_email</code>).</p><p>To set the custom assigns for use in templates, a <code class="inline">Conn.Plug</code> and a helper module with <a href="https://hexdocs.pm/phoenix_live_view/Phoenix.LiveView.html#on_mount/1">on_mount</a> callback are included. There modules function as bridge between Phoenix Views and Phoenix Live Views.</p><p>As a result, using different assigns per locale is a matter of plug-and-play.</p><h2 id="example-application" class="section-heading">
+  <a href="#example-application" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
+  <p class="sr-only">example-application</p>
+  </a>
+  Example Application
 </h2>
-<p>Phoenix Localized Routes makes use of <a href="https://hexdocs.pm/elixir/Macro.html"><code class="inline">Macro</code></a>'s to wrap Phoenix Router and Phoenix Router Helpers. It generates alternate helpers and paths based on the routes defined in <code class="inline">[YourApp].Routes</code>. Alternate routes are generated at compile time; making them just as fast as the explicitly defined routes.</p><p>If a wrapped function call fails, the original function will be called to ensure your application always links to an available page.</p><p>To set the custom assigns for use in templates, a <code class="inline">Conn.Plug</code> and a helper module with  <a href="https://hexdocs.pm/phoenix_live_view/Phoenix.LiveView.html#on_mount/1">on_mount</a> callback are included.</p>
+<p>An example Phoenix application showing translated routes and custom assigns is available at GitHub.</p><pre><code class="makeup bash" translate="no"><span class="">  git clone https://github.com/BartOtten/phoenix_localized_routes_example.git
+</span><span class="">  cd phoenix_localized_routes_example
+</span><span class="">  iex -S mix phx.server
+</span></code></pre><p>Once the application is running, have a look at the <a href="http://localhost:4000/europe/nl/producten/">example page</a>.</p>
 <div class="bottom-actions">
   <div class="bottom-actions-item">
 
